[gd_scene load_steps=4 format=3 uid="uid://dsfc26eqpq6ki"]

[ext_resource type="Script" path="res://core/ui/config/game_config.gd" id="1_t1nk8"]
[ext_resource type="PackedScene" uid="uid://cf011ecvi2pr7" path="res://core/ui/config/track_picker.tscn" id="2_7mklj"]
[ext_resource type="PackedScene" uid="uid://dyaeadu4s2csp" path="res://core/ui/config/modes/rule_configurator.tscn" id="2_22dhf"]

[node name="GameConfig" type="VBoxContainer"]
script = ExtResource("1_t1nk8")

[node name="TrackPicker" parent="." instance=ExtResource("2_7mklj")]
unique_name_in_owner = true
layout_mode = 2

[node name="RuleConfigurator" parent="." instance=ExtResource("2_22dhf")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="track_selected" from="TrackPicker" to="." method="_on_track_picker_track_selected"]
[connection signal="rules_changed" from="RuleConfigurator" to="." method="_on_rule_configurator_rules_changed"]
